fix: make blog topics align correctly

--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -48,9 +48,12 @@
     }
   }
   &-header {
-    margin-bottom: 10px;
+    margin: 10px;
+    @media (min-width: 768px) {
+      margin: 10px 20px;
+    }
     &-admin {
-      margin-bottom: 10px;
+      margin: 10px 0px;
     }
   }
 
